@@ -1,0 +1,47 @@
+/**************************************************************************
+**       Title: testing of the new API for camera detection
+**    $RCSfile$
+**   $Revision: 414 $$Name$
+**       $Date: 2007-08-14 14:25:38 +0900 (Tue, 14 Aug 2007) $
+**   Copyright: LGPL $Author: ddouxchamps $
+** Description:
+**
+**    This program will be removed from the SVN repo when the new API
+**    for camera detection works properly.
+**
+**************************************************************************/
+
+#include <stdio.h>
+#include <stdlib.h>
+#include <stdint.h>
+#include <dc1394/control.h>
+
+int main(int argc, char *argv[]) 
+{
+  dc1394_t *dc1394;
+  dc1394camera_t *camera;
+  dc1394error_t err;
+  int i;
+
+  // initialise the library
+  dc1394=dc1394_new();
+
+  // enumerate camera GUIDs
+  err=dc1394_enumerate_cameras(dc1394);
+  if (err!=DC1394_NO_CAMERA) {
+    DC1394_ERR_RTN(err,"Could not enumerate cameras");
+  }    
+  fprintf(stderr,"Found %d camera(s)\n",dc1394->n_cameras);
+  
+  // get each camera struct, print info and erase camera
+  for (i=0;i<dc1394->n_cameras;i++) {
+    camera=dc1394_camera_new(dc1394,dc1394->guids[i]);
+    dc1394_print_camera_info(camera);
+    dc1394_camera_free(camera);
+  }
+    
+  // exit the library
+  dc1394_free(dc1394);
+
+  return 0;
+}
